--- a/groceries/templates/groceries/recipe-edit.html
+++ b/groceries/templates/groceries/recipe-edit.html
@@ -6,6 +6,7 @@
 
 {% block head %}
 <script src="{% static 'groceries/js/edit-recipe.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'groceries/css/recipe-edit.css' %}">
 {% endblock %}
 
 {% block header %}
