--- a/groceries/templates/groceries/recipes.html
+++ b/groceries/templates/groceries/recipes.html
@@ -1,5 +1,11 @@
 {% extends "groceries/base.html" %}
 
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static 'groceries/css/recipes.css' %}">
+{% endblock %}
+
 {% block title %}Recipes {{ block.super }}{% endblock %}
 
 {% block header %}
@@ -20,7 +26,7 @@
   </ul>
 
   <form action="{% url 'groceries:importRecipes' %}" id="importForm" class="import-form hidden" method="POST" enctype="multipart/form-data">{% csrf_token %}
-    <h2>Import XML file</h2>
+    <h2>Import XML file</h2><span class="close-button" onclick=toggleImportForm()>[x]</span>
     <input type="file" name="xml">
     <button type="submit">Upload</button>
   </form>
