--- a/groceries/templates/groceries/home.html
+++ b/groceries/templates/groceries/home.html
@@ -1,5 +1,11 @@
 {% extends "groceries/base.html" %}
 
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static 'groceries/css/home.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="center-container">
 
