--- a/groceries/templates/groceries/recipe.html
+++ b/groceries/templates/groceries/recipe.html
@@ -1,5 +1,7 @@
 {% extends "groceries/base.html" %}
 
+{% load static %}
+
 {% block title %}Recipe | {{ block.super }}{% endblock %}
 
 {% block head %}
