--- a/groceries/static/groceries/css/recipes.css
+++ b/groceries/static/groceries/css/recipes.css
@@ -24,6 +24,16 @@
   display: block;
 }
 
+.add-recipe {
+  background-color: darkorange;
+  box-shadow: 0 5px 25px 0 black;
+  text-decoration: none;
+  font-size: 1.3em;
+  color: white;
+  padding: 10px;
+  display: block;
+}
+
 .import-form {
   position: fixed;
   border: 4px solid darkgreen;
