Finances: view transactions

--- a/PW/templates/PW/home.html
+++ b/PW/templates/PW/home.html
@@ -46,7 +46,7 @@
 
     <div class='featured-link'>
         <h2>Featured link</h2>
-        <p>I've build a game recently, go play it!</p>
+        <p>I've built a game recently, go play it!</p>
         <a href='{% url "PW:memory" %}'>Play!</a>
     </div>
 
