--- a/finances/templates/finances/home.html
+++ b/finances/templates/finances/home.html
@@ -11,7 +11,7 @@
 
   <div class="home-button">
     <canvas height=100px width=100px></canvas>
-    <a href="{% url 'finances:transactions' %}">Transactions</a>
+    <a href="{% url 'finances:default_transactions' %}">Transactions</a>
   </div>
 
   <div class="home-button">
