--- a/finances/static/finances/css/basic_form.css
+++ b/finances/static/finances/css/basic_form.css
@@ -16,7 +16,7 @@ td:nth-child(2) > * {
   padding: 10px;
 }
 
-.transaction-save-button {
+.save-button {
   padding: 10px;
   background-color: blue;
   color: white;
@@ -26,7 +26,7 @@ td:nth-child(2) > * {
   cursor: pointer;
 }
 
-.transaction-delete-button {
+.delete-button {
   background-color: white;
   border: none;
   color: red;
