--- a/finances/templates/finances/category.html
+++ b/finances/templates/finances/category.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'finances/css/basic_form.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'finances/css/basic-form.css' %}">
 {% endblock %}
 
 {% block header %}
