--- a/finances/static/finances/css/categories.css
+++ b/finances/static/finances/css/categories.css
@@ -1,7 +1,8 @@
 .category-table {
   margin: 15px;
-  max-width: 1000;
   border-collapse: collapse;
+  display: inline-block;
+  vertical-align: top;
 }
 .category-table > thead th {
   text-align: left;
@@ -14,6 +15,10 @@
   vertical-align: top;
   padding: 10px 10px;
   background-color: lightblue;
+}
+.category-table > tbody > tr > td a {
+  color: black;
+  text-decoration: none;
 }
 .category-table > tbody > tr > td:nth-child(2) {
   width: 150px;
