--- a/finances/templates/finances/search-term.html
+++ b/finances/templates/finances/search-term.html
@@ -2,42 +2,47 @@
 
 {% load static %}
 
-{% block header %}
-<a class="prev" href="{% url 'finances:default_transactions' %}">&#10094;</a> {{ block.super }}
-{% endblock %}
-
 {% block head %}
 <link rel="stylesheet" type="text/css" href="{% static 'finances/css/basic-form.css' %}">
-<script src="{% static 'finances/js/transaction.js' %}"></script>
+<script src="{% static 'finances/js/search-term.js' %}"></script>
 <script>var category_data = JSON.parse('{{ category_data | escapejs }}');</script>
+{% endblock %}
+
+{% block header %}
+<a class="prev" href="{% url 'finances:search_terms' %}">&#10094;</a> {{ block.super }}
 {% endblock %}
 
 {% block content %}
 
 {{ form.non_field_errors }}
-<form class='transaction-form' id="transaction-form" method="POST">{% csrf_token %}
+<form method='post'>{% csrf_token %}
   <table>
     <thead>
       <tr>
         <th colspan=3>
           {% if add %}
-          <h1>Add new transaction</h1>
+          <h1>Add new search term</h1>
           {% else %}
-          <h1>Edit transaction</h1>
+          <h1>Edit search term</h1>
           {% endif %}
         </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>{{ form.date.label_tag }}</td>
-        <td>{{ form.date }}</td>
-        <td>{{ form.date.errors }}</td>
+        <td>{{ form.dataset.label_tag }}</td>
+        <td>{{ form.dataset }}</td>
+        <td>{{ form.dataset.errors }}</td>
       </tr>
       <tr>
-        <td>{{ form.amount.label_tag }}</td>
-        <td>{{ form.amount }}</td>
-        <td>{{ form.amount.errors }}</td>
+        <td>{{ form.term.label_tag }}</td>
+        <td>{{ form.term }}</td>
+        <td>{{ form.term.errors }}</td>
+      </tr>
+      <tr>
+        <td>{{ form.field.label_tag }}</td>
+        <td>{{ form.field }}</td>
+        <td>{{ form.field.errors }}</td>
       </tr>
       <tr>
         <td>{{ form.category.label_tag }}</td>
@@ -51,13 +56,12 @@
       </tr>
       <tr>
         <td></td>
-        <td><input class='save-button' type="submit" name="save" value="Save transaction"></td>
+        <td><input class='save-button' type="submit" name="save" value="Save"></td>
         {% if add == False %}
-        <td><a class='delete-button' href="{% url 'finances:delete_transaction' form.instance.id %}">Delete transaction</a></td>
+        <td><a class='delete-button' href="{% url 'finances:delete_search_term' form.instance.id %}">Delete search term</a></td>
         {% endif %}
-      </tr>
     </tbody>
   </table>
 </form>
 
-{% endblock content %}
+{% endblock %}
