--- a/finances/templates/finances/year-table.html
+++ b/finances/templates/finances/year-table.html
@@ -97,4 +97,36 @@
 		</tr>
 	</tfoot>
 </table>
+
+<table>
+	<thead>
+		<tr>
+			<th>Error</th>
+			<th>Jan</th>
+			<th>Feb</th>
+			<th>Mar</th>
+			<th>Apr</th>
+      <th>May</th>
+      <th>June</th>
+      <th>July</th>
+      <th>Aug</th>
+      <th>Sep</th>
+      <th>Oct</th>
+      <th>Nov</th>
+      <th>Dec</th>
+			<th>Total</th>
+		</tr>
+	</thead>
+  <tbody>
+		<tr>
+			<td>Error</td>
+			{% for e in errors %}
+        <td>{{ e }}</td>
+      {% endfor %}
+		</tr>
+	</tbody>
+</table>
+
+
+
 {% endblock %}
