--- a/groceries/static/groceries/css/base.css
+++ b/groceries/static/groceries/css/base.css
@@ -51,7 +51,6 @@ header a {
   position: absolute;
   right: 15px;
   top: 40px;
-  padding: 15px;
   box-shadow: 0 5px 25px 0 black;
   z-index: 1;
 }
@@ -60,7 +59,7 @@ header a {
   text-decoration: none;
   color: black;
   display: block;
-  margin-bottom: 15px;
+  margin: 15px;
 }
 
 .center-container {
