--- a/pj/static/pj/css/base.css
+++ b/pj/static/pj/css/base.css
@@ -5,8 +5,9 @@ body {
   font-family: sans-serif;
   margin: 0;
   min-height: 100%;
-  padding-bottom: 0px;
+  padding-bottom: 100px;
   position: relative;
+  box-sizing: border-box;
 }
 .hidden {
   display: none;
@@ -21,12 +22,23 @@ header > h1 {
   font-family: 'Cambria', serif;
   font-size: 3em;
 }
+
+
+nav {
+  text-align: center;
+}
+.menu-button {
+  background: none;
+  border: 3px solid black;
+  border-radius: 5px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
 nav > ul {
   text-align: center;
   padding: 0;
 }
 nav > ul > li {
-  display: inline;
   list-style: none;
 }
 nav a {
@@ -38,6 +50,30 @@ nav a {
   color: black;
   text-decoration: none;
 }
+@media only screen and (max-width: 549px){
+  nav ul {
+    display: none;
+  }
+  nav li {
+    margin-top: 30px;
+  }
+  .nav-active {
+    display: inline-block;
+  }
+  .menu-button {
+    display: inline-block;
+  }
+}
+@media only screen and (min-width: 550px){
+  .menu-button {
+    display: none;
+  }
+  nav > ul > li {
+    display: inline;
+  }
+}
+
+
 footer {
   background-color: lightgreen;
   padding: 20px 20px;
