--- a/pj/static/pj/css/view_turnout.css
+++ b/pj/static/pj/css/view_turnout.css
@@ -1,6 +1,10 @@
 h2 {
   text-align: center;
 }
+div {
+  width: 90%;
+  max-width: 340px;
+}
 table {
   margin: auto;
   border-collapse: collapse;
@@ -12,7 +16,7 @@ thead tr:nth-child(2) th {
 th {
   background-color: lightgreen;
   text-align: left;
-  padding: 15px;
+  padding: 10px;
 }
 th:first-child {
   font-size: 1.5em;
@@ -21,9 +25,9 @@ tr:nth-child(even){
   background-color: #f2f2f2
 }
 td {
-  padding: 10px;
+  padding: 5px;
 }
 td:first-child {
-  padding-right: 20px;
+  padding-right: 10px;
   background-color: lightgreen;
 }
