--- a/pj/templates/pj/base.html
+++ b/pj/templates/pj/base.html
@@ -14,7 +14,7 @@
 <body>
 
   <header>
-    <h1>PJubeljaar</h1>
+    <img src="{% static 'pj/img/logo.png' %}" height="100px"/>
     <nav>
       <button onclick="toggleMenu()" type="button" class="menu-button">&#9776</button><br>
       <ul id="nav-links">
