--- a/pj/templates/pj/signup.html
+++ b/pj/templates/pj/signup.html
@@ -5,11 +5,19 @@
 {% block head %}
 <link rel="stylesheet" type="text/css" href="{% static 'pj/css/signup.css' %}">
 <script src="{% static 'pj/js/signup.js' %}"></script>
+<style>
+body {
+  background-image: linear-gradient(rgba(0,46,255,0.5), rgba(25,150,150,0.5)), url("{% static 'pj/img/zaklopen.jpg' %}");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+</style>
 {% endblock %}
 
 {% block content %}
 
-<section>
+<section id="content">
   <h2>Aanmelden voor de reunie</h2>
   <p>Gezellig dat je ook wil komen!</p>
 
