--- a/pj/static/pj/css/home.css
+++ b/pj/static/pj/css/home.css
@@ -1,6 +1,61 @@
+section {
+  width: 90%;
+  margin: auto;
+}
 section h2 {
   text-align: center;
+  color: white;
+  font-weight: bold;
+  text-shadow: 2px 2px #000000;
 }
 section p {
   text-align: center;
+  color: white;
+  font-weight: bold;
+  text-shadow: 1px 1px #000000;
+}
+.link-container {
+  text-align: center;
+}
+section a {
+  color: black;
+  background-color: #94C11F;
+  border: 4px solid black;
+}
+section a:hover {
+  background-color: darkgreen;
+  color: white;
+}
+
+@media only screen and (max-width: 549px){
+  section h2 {
+    font-size: 2em;
+  }
+  section p {
+    font-size: 1em;
+  }
+  section a {
+    padding: 10px;
+    font-size: 1em;
+    border-radius: 10px;
+  }
+  .link-container {
+    margin-top: 30px;
+  }
+}
+@media only screen and (min-width: 550px){
+  section h2 {
+    font-size: 5em;
+  }
+  section p {
+    font-size: 2em;
+  }
+  section a {
+    padding: 20px;
+    font-size: 2em;
+    border-radius: 20px;
+  }
+  .link-container {
+    margin-top: 100px;
+  }
 }
