--- a/pj/static/pj/css/schedule.css
+++ b/pj/static/pj/css/schedule.css
@@ -1,8 +1,13 @@
 section h2 {
   text-align: center;
+  color: white;
 }
 section ul {
   text-align: center;
   list-style: none;
   margin: 0;
+  color: white;
+}
+section a {
+  color: white;
 }
