--- a/pj/static/pj/css/signup.css
+++ b/pj/static/pj/css/signup.css
@@ -2,17 +2,23 @@ section h2 {
   text-align: center;
   font-size: 2em;
   margin-bottom: 10px;
+  color: white;
 }
 section p {
   margin: 0 0 20px 0;
   text-align: center;
+  color: white;
 }
 
 #signup-form {
   margin-bottom: 100px;
+  color: white;
 }
 #signup-form table {
   margin:auto;
+  background-color: rgba(0,0,0,0.7);
+  padding: 30px;
+  border-radius: 20px;
 }
 #signup-form td {
   padding-bottom: 10px;
