--- a/pj/templates/pj/home.html
+++ b/pj/templates/pj/home.html
@@ -4,13 +4,25 @@
 
 {% block head %}
 <link rel="stylesheet" type="text/css" href="{% static 'pj/css/home.css' %}">
+<style>
+body {
+  background-image: linear-gradient(rgba(0,46,255,0.5), rgba(25,150,150,0.5)), url("{% static 'pj/img/gebouw.jpg' %}");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+</style>
 {% endblock %}
 
 {% block content %}
 
-<section>
+<section id="content">
   <h2>50 jaar!</h2>
-  <p>De Pieter Jongelingschool bestaat 50 jaar, dus het is tijd voor een PJubeljaar!</p>
+  <p>De Pieter Jongelingschool bestaat 50 jaar, dus het is tijd voor een PJubeljaar!<br>
+  En natuurlijk een reünie op een datum!</p>
+  <div class="link-container">
+    <a href="{% url 'pj:signup' %}">Meld je aan voor de reünie!</a>
+  </div>
 </section>
 
 {% endblock %}
