--- a/pj/static/pj/css/list_of_attendees.css
+++ b/pj/static/pj/css/list_of_attendees.css
@@ -33,6 +33,9 @@ h3 {
 .attendees tbody tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+.attendees tbody tr:nth-child(odd) {
+  background-color: #ffffff;
+}
 .attendees td {
   padding: 5px;
 }
