--- a/pj/templates/pj/home.html
+++ b/pj/templates/pj/home.html
@@ -20,7 +20,7 @@ body {
 <section id="content">
   <h2>50 jaar!</h2>
   <p>De Pieter Jongelingschool bestaat 50 jaar, dus het is tijd voor een PJubeljaar!<br>
-  En natuurlijk een reünie op een datum!</p>
+  En natuurlijk een reünie op 2 juni 2018!</p>
   <div class="link-container">
     <a href="{% url 'pj:signup' %}">Meld je aan voor de reünie!</a>
   </div>
