--- a/pj/static/pj/css/base.css
+++ b/pj/static/pj/css/base.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  height: 100vh;
 }
 body {
   font-family: sans-serif;
@@ -13,7 +13,6 @@ body {
   display: none;
 }
 header {
-  background-color: rbga(0,0,0,1);
   padding: 15px 30px;
   text-align: center;
 }
@@ -76,7 +75,6 @@ nav a {
 
 
 footer {
-  background-color: rbga(0,0,0,1);
   padding: 20px 20px;
   position: absolute;
   bottom: 0;
