--- a/pj/static/pj/css/view_turnout.css
+++ b/pj/static/pj/css/view_turnout.css
@@ -28,7 +28,7 @@ td {
   padding: 5px;
 }
 td:first-child {
-  padding-right: 10px;
+  padding: 15px;
   background-color: #94C11F;
 }
 #table-wrapper {
@@ -38,5 +38,17 @@ td:first-child {
 #table-scroll {
   height: 500px;
   overflow:auto;
+  display: inline-block;
+}
+.messages {
+  text-align: center;
+  margin: 0;
+  list-style: none;
+}
+.success {
+  background-color: rgba(0,0,0,0.7);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
   display: inline-block;
 }
